<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
        
		<TextView 
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/etTitle" />
	
		<TextView 
		    android:id="@+id/tvShowTitle"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dp"
		    style="@android:style/TextAppearance.DeviceDefault.Medium" />
		
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/etAuthor" />
		
		<TextView 
		    android:id="@+id/tvShowAuthor"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dp"
		    style="@android:style/TextAppearance.DeviceDefault.Medium" />
		
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/etIsbn" />
		
		<TextView 
		    android:id="@+id/tvShowIsbn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dp"
		    style="@android:style/TextAppearance.DeviceDefault.Medium" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/btEdit"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="#a2cff0"
            android:textColor="#fff" 
            android:text="@string/btEdit" />
        
        <Button
            android:id="@+id/btRemove"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:background="#a2cff0"
            android:textColor="#fff"
            android:enabled="true"
            android:text="@string/btRemove" />   
        
    </LinearLayout>
    
	
</LinearLayout>
